--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,7 +2,22 @@ version: 2
 
 sources:
     - name: sunrise
+      description: A copy of a Redshift application database
       database: dev
       tables:
         - name: jaffle_shop_orders
+          description: Raw orders
+          columns:
+            - name: id
+              description: primary key for orders
+              tests:
+                - unique
+                - not null
         - name: jaffle_shop_customers
+          description: Raw customers data
+          columns:
+            - name: id
+              description: Primary key for customers
+              tests:
+                - unique
+                - not null
