--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,22 +2,27 @@ version: 2
 
 sources:
     - name: sunrise
-      description: A copy of a Redshift application database
+      description: A clone of a Redshift application database.
       database: dev
       tables:
-        - name: jaffle_shop_orders
-          description: Raw orders
-          columns:
-            - name: id
-              description: primary key for orders
-              tests:
-                - unique
-                - not null
         - name: jaffle_shop_customers
-          description: Raw customers data
+          description: Raw customers data.
           columns:
             - name: id
-              description: Primary key for customers
+              description: Primary key for customers.
               tests:
                 - unique
-                - not null
+                - not_null
+              
+        - name: jaffle_shop_orders
+          loaded_at_field: _etl_loaded_at
+          freshness:
+            warn_after: {count: 12, period: hour}
+            error_after: {count: 24, period: hour}
+          description: Raw orders data.
+          columns:
+            - name: id
+              description: Primary key for orders.
+              tests:
+                - unique
+                - not_null
